[package]
name = "condest"
version = "0.2.1"
authors = ["Richard Janis Goldschmidt <janis.beckert@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/superfluffy/rust-condest"
description = "An implementation of the 1-norm and condition number estimator by Higham and Tisseur, 2000"
readme = "README.md"

categories = ["science"]
keywords = ["condition", "linalg", "matrix", "ndarray", "norm"]

[dependencies]
cblas = "0.4.0"
lapacke = "0.5.0"
ndarray = "0.15.6"
ordered-float = "3.3.0"
rand = "0.8.5"
rand_xoshiro = "0.6"

[dev-dependencies]
ndarray-rand = "0.14.0"
openblas-src = "0.10.5"
